3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/loader.l: Make it so that long msg/endmsg won't overflow temp buffer
  by using safe_strcat.  Will result in long messages being truncated, but
  better than crashes.
server/pets.c: Check for existance of object existance after call to
  follow_owner() in remove_all_pets().  Can be cases where put is killed
  when moving to new map.
MSW 2006-10-18

server/apply.c: If the captain of a transport exits the transport, make the
   next player on the transport the captain.
server/server.c: Like change to apply.c to make player another player captain
   if one leaves the game.  But in addition, in all cases, we need to clean
   up the transport->contr pointer, which will otherwise cause crashes.
MSW 2006-10-12

common/readable.c: Rewrite god_info_msg() - a buffer overflow crash was seen
  on metalforge, and the old code had lots of dangerous string operations
  (non safe strcats, sprintf with overlapping buffers).  No code is
  functionally equivalant, just uses safe string funtions.
MSW 2006-10-12

doc/Developers/objects updated to better describe @match use in objects. Many
objects contain useless case handling keys like @match Hello|hello because
mapmakers do not know how @match works.  Also add mention of the limited
regular expression support that applies to match keys.
Kevin R. Bulgrien 2006-10-08

Make converters inside shops work again.
---
server/c_object.c: Sell item after dropping because converters do not accept
   unpaid items.
Andreas Kirschbaum 2006-10-08

Fix bug where in players could unequip cursed weapons by switching to a hand
to hand skill (punching, karate, etc).
--