@@ -245,7 +245,8 @@ int command_hide(object *op, char *params);
 int command_setgod(object *op, char *params);
 int command_banish(object *op, char *params);
 int command_kick(object *op, const char *params);
-int command_save_overlay(object *op, char *params);
+int command_overlay_save(object *op, char *params);
+int command_overlay_reset(object *op, char *params);
 int command_toggle_shout(object *op, char *params);
 int command_shutdown(object *op, char *params);
 int command_goto(object *op, char *params);
