@@ -266,8 +266,9 @@ command_array_struct WizCommands [] = {
   {"toggle_shout", command_toggle_shout,0.0},
   {"wizpass", command_wizpass,0.0},
   {"wizcast", command_wizcast,0.0},
-  {"overlay_save", command_save_overlay, 0.0},
-/*  {"possess", command_possess, 0.0}, */
+  {"overlay_save", command_overlay_save, 0.0},
+  {"overlay_reset", command_overlay_reset, 0.0},
+  /*  {"possess", command_possess, 0.0}, */
   {"mon_aggr", command_mon_aggr, 0.0},
   {"loadtest", command_loadtest, 0.0},
 };
